<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryContainer"
    android:paddingTop="12dp"
    android:paddingBottom="24dp">

    <HorizontalScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/set_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/command_set"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorPrimary" />

            <com.google.android.material.chip.Chip
                android:id="@+id/get_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/command_get"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorPrimary" />

            <com.google.android.material.chip.Chip
                android:id="@+id/begin_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/command_begin"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorPrimary" />

            <com.google.android.material.chip.Chip
                android:id="@+id/commit_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/command_commit"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorPrimary" />

            <com.google.android.material.chip.Chip
                android:id="@+id/rollback_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/command_rollback"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorPrimary" />

            <com.google.android.material.chip.Chip
                android:id="@+id/delete_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:text="@string/command_delete"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorPrimary" />

        </LinearLayout>

    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/command_input_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/send_command_button"
        app:layout_constraintEnd_toStartOf="@+id/send_command_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/send_command_button">

        <EditText
            android:id="@+id/command_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/command_input_bg"
            android:hint="@string/hint_command_input"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_command_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/send_command_content_description"
        android:src="@drawable/ic_console_line"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollview"
        app:tint="?attr/colorOnPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>